[package]
name = "netbox-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"

[features]
## Use `serde_json` as the JSON backend (default).
default = ["serde_json"]
## Use `serde_json` as the JSON backend.
serde_json = ["dep:serde_json"]
## Use `sonic-rs` as the JSON backend (mutually exclusive with `serde_json` and `simd-json`).
sonic-rs = ["dep:sonic-rs"]
## Use `simd-json` as the JSON backend (mutually exclusive with `serde_json` and `sonic-rs`).
simd-json = ["dep:simd-json"]

[dependencies]
reqwest = { version = "0.13.2", features = ["query", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
sonic-rs = { version = "0", optional = true }
simd-json = { version = "0", optional = true }
thiserror = "2"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0"
json-ts = { git = "https://github.com/ogital-net/json-ts", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
env_logger = "0.11"
rustez = { git = "https://github.com/fastrevmd-lab/rustEZ" }
quick-xml = "0.37"
async-snmp = { version = "0.12", default-features = false, features = ["crypto-rustcrypto"] }